# agent-yes

./: .gitignore  .gitmodules  .releaserc.json  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  SKILL.md  agent-yes.config.schema.json  agent-yes.config.ts  default.config.yaml  knip.json  package.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
.github/workflows/: deploy-agent-yes.yml  deploy-beta.yml  deploy-cf.yml  docker.yml  gh-pages.yml  matrix-test.yml  promote-release.yml  publish-beta.yml  release.yml  rust-build.yml  ui-test.yml
.husky/: pre-commit  pre-push
config/: cli-defaults.yaml
desktop/: .gitignore  README.md  bundle-cli.mjs  main.js  package.json  preload.js
docs/: 2026-05-10-ai-knowledge-wisdom-boundaries.en.md  2026-05-10-ai-knowledge-wisdom-boundaries.zh.md  agent-sharing.md  architecture.md  auth-and-permissions.md  auto-update.md  backpressure.md  cold-start-optimization.md  cy-subcommands.md  index-refactoring-plan.md  launcher-exec-handoff.md  non-tty-output.md  orchestrator-observability.md  provisioning.md  pty-resize.md  shared-canvas.md  subagent-notify.md  swarm-in-docker.md  swarm.md
docs/feat/: opencode-cli-support.md
docs/ui-test/: README.md
examples/: .agent-yes.config.json  .agent-yes.config.yaml  spawn-notify.sh
lab/http-remote/: run.sh  worker.md
lab/local-role-play/: builder-prompt.md
lab/p2p-pairing/: ping.md  pong.md  run.sh
lab/role-swarm/: SWARM.md  designer-prompt.md  run.sh
lab/ui/: README.md  architecture.html  ask.html  ch.html  console-logic.js  e2e.d.ts  e2e.js  index.html  (+11 more)
rs/: .gitignore  Cargo.toml  Makefile  build.rs  tarpaulin.toml
rs/src/: cli.rs  codex_sessions.rs  config.rs  config_loader.rs  context.rs  fifo.rs  idle_waiter.rs  installer.rs  log_files.rs  logger.rs  main.rs  messaging.rs  non_tty_renderer.rs  pid_store.rs  pty_spawner.rs  ready_manager.rs  reaper.rs  running_lock.rs  utils.rs  vterm.rs  webhook.rs
rs/src/swarm/: behaviour.rs  coordinator.rs  messages.rs  mod.rs  node.rs  url.rs
rs/tests/: integration_tests.rs  test_ctrl_c.sh
scripts/: build-rgui.ts  build-rs.ts  cf.ts  check-e2e.ts  download-rust-binary.ts  patch-mcp-sdk.js  verify-deps.js
tests/: ctrl_c.spec.ts  debug-ctrl-c.ts  debug-stdin-direct.ts  mock-claude.sh  test-direct-stdin.spec.ts
ts/: JsonlStore.spec.ts  JsonlStore.ts  SqliteAdapter.ts  agent.ts  agentNice.spec.ts  agentNice.ts  agentRegistry.ts  agentShare.lifecycle.spec.ts  agentShare.spec.ts  agentShare.ts  agentTree.spec.ts  agentTree.ts  agentYesHome.spec.ts  agentYesHome.ts  askApi.spec.ts  askApi.ts  autoRetry.spec.ts  autoRetry.ts  badges.spec.ts  badges.ts  buildRustArgs.spec.ts  buildRustArgs.ts  callback.ts  callbackCore.spec.ts  callbackCore.ts  channels.spec.ts  channels.ts  cli.ts  configLoader.spec.ts  configLoader.ts  configShared.spec.ts  configShared.ts  cwdConflictWarn.spec.ts  cwdConflictWarn.ts  cwdDeprecation.spec.ts  cwdDeprecation.ts  defineConfig.spec.ts  e2e-crypto.spec.ts  expose.ts  forkNested.spec.ts  (+103 more)
(+51 files in other folders)
