[package]
name = "agent-yes"
version = "1.31.41"
edition = "2021"
description = "Automated interaction wrapper for AI coding assistants"
authors = ["snomiao"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "agent-yes"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }
futures = "0.3"

# PTY handling
portable-pty = "0.8"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Regex for pattern matching
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite for PidStore
rusqlite = { version = "0.31", features = ["bundled"] }

# Time utilities
chrono = "0.4"
humantime = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal handling
crossterm = "0.27"
strip-ansi-escapes = "0.2"

# Directories
dirs = "5"

# Misc
lazy_static = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
